discussion/kv_engine/188603/188603_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-56101: Fix missing newlines in allocator stats

Call the getDetailedStats overlaod which returns the output as a single
contiguous blob and return that to the client.

Change-Id: Iddd8a54c19fa59b3b76592e783e9466554b1366c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Vesko Karaganev
Date: 2023-03-23 14:41:48.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-03-23 16:19:00.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/52534/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/daemon/protocol/mcbp/stats_context.cc(532): error C2660: "cb::_ArenaMalloc<cb::JEArenaMalloc>::getDetailedStats": function does not take 0 arguments ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/52534/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/44071/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/daemon/protocol/mcbp/stats_context.cc:532:54:
error: too few arguments to function call, expected 2, have 0
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/44071/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/23064/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/mcbp/stats_context.cc:532:54: error: too few arguments to function call, expected 2, have 0 [clang-diagnostic-error]
    auto details = cb::ArenaMalloc::getDetailedStats();
                                                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/platform/cb_arena_malloc.h:358:5: note: "getDetailedStats" declared here
    static void getDetailedStats(void (*callback)(void*, const char*),
    ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/23064/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/mcbp/stats_context.cc:532:54:
error: too few arguments to function call, expected 2, have 0 [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/23064/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/26447/ : FAILURE

Compile error at [2023-03-23T15:21:26.926Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/daemon/protocol/mcbp/stats_context.cc:532:54:
error: too few arguments to function call, expected 2, have 0
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/26447/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/24721/ : FAILURE

Compile error at [2023-03-23T16:18:34.893Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master_2/kv_engine/daemon/protocol/mcbp/stats_context.cc:532:54:
error: too few arguments to function call, expected 2, have 0
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/24721/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/33546/ : FAILURE

Compile error at [2023-03-23T15:21:50.380Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/daemon/protocol/mcbp/stats_context.cc:532:54:
error: too few arguments to function call, expected 2, have 0
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/33546/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1872/ : FAILURE

Compile error at [2023-03-23T15:17:13.281Z] /home/couchbase/jenkins/workspace/kv_engine.linux-debug_master/kv_engine/daemon/protocol/mcbp/stats_context.cc:532:54:
error: no matching function for call to ?cb::_ArenaMalloc<cb::_JEArenaMalloc<cb::JEArenaCoreLocalTracker> >::getDetailedStats()?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1872/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12796/ : FAILURE

Compile error at [2023-03-23T15:18:38.560Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/daemon/protocol/mcbp/stats_context.cc:532:54:
error: too few arguments to function call, expected 2, have 0
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12796/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/25595/ : FAILURE

Compile error at [2023-03-23T15:25:57.659Z] ../kv_engine/daemon/protocol/mcbp/stats_context.cc:532:54:
error: no matching function for call to ?cb::_ArenaMalloc<cb::_JEArenaMalloc<cb::JEArenaCoreLocalTracker> >::getDetailedStats()?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/25595/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/25132/ : FAILURE

Compile error at [2023-03-23T15:21:10.186Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/daemon/protocol/mcbp/stats_context.cc:532:54:
error: no matching function for call to ?cb::_ArenaMalloc<cb::_JEArenaMalloc<cb::JEArenaCoreLocalTracker> >::getDetailedStats()?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/25132/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12877/ : FAILURE

Compile error at [2023-03-23T14:53:09.975Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/daemon/protocol/mcbp/stats_context.cc:532:54:
error: no matching function for call to ?cb::_ArenaMalloc<cb::_JEArenaMalloc<cb::JEArenaCoreLocalTracker> >::getDetailedStats()?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12877/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/23345/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
